Added command line tool and setup.py, and got package listings working

--- a/Sims4 DBPF Demo.ipynb
+++ b/Sims4 DBPF Demo.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Raw Cell Format",
   "name": "",
-  "signature": "sha256:2984b8689c4a571f8bf7e0a1555ab587520d533d1dae25f776e1f1221740543c"
+  "signature": "sha256:4bc1fecc26a249c0d90477f13568190633b35913327b57b7fb1e4e94cd88f8da"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -73,21 +73,21 @@
        "output_type": "pyout",
        "prompt_number": 4,
        "text": [
-        "[IndexEntry(id=0017e8f6!86c68a94e577adc8.545ac67a, offset=983, size=411, size_decompressed=624, compression=(65535, 1)),\n",
-        " IndexEntry(id=00000000!ed7000a97ea8f032.cb5fddc7, offset=4814, size=460, size_decompressed=586, compression=(65535, 1)),\n",
-        " IndexEntry(id=005fdd0c!ed7000a97ea8f032.545ac67a, offset=2192, size=515, size_decompressed=824, compression=(65535, 1)),\n",
-        " IndexEntry(id=80000000!889a604f0a722f69.c0db5ae7, offset=4569, size=245, size_decompressed=300, compression=(65535, 1)),\n",
-        " IndexEntry(id=0017e8f6!ef763f593d7b1d07.545ac67a, offset=1784, size=408, size_decompressed=621, compression=(65535, 1)),\n",
-        " IndexEntry(id=80000000!889a604f0a722f69.319e4f1d, offset=901, size=82, size_decompressed=136, compression=(65535, 1)),\n",
-        " IndexEntry(id=00000000!00d4c1ffd5a99fdb.220557da, offset=657, size=244, size_decompressed=297, compression=(65535, 1)),\n",
-        " IndexEntry(id=00000000!c8a4d404a5a3bb0e.6017e896, offset=3209, size=655, size_decompressed=1130, compression=(65535, 1)),\n",
-        " IndexEntry(id=00000000!b6172a3815ab8ef1.0c772e27, offset=96, size=281, size_decompressed=347, compression=(65535, 1)),\n",
-        " IndexEntry(id=00000000!fecfa9ccb71b7a4c.0c772e27, offset=377, size=280, size_decompressed=345, compression=(65535, 1)),\n",
-        " IndexEntry(id=00000000!86c68a94e577adc8.6017e896, offset=2707, size=502, size_decompressed=730, compression=(65535, 1)),\n",
-        " IndexEntry(id=00000000!a586620a4681b704.e882d22f, offset=5274, size=935, size_decompressed=1603, compression=(65535, 1)),\n",
-        " IndexEntry(id=00000000!c480a6db0381546e.b61de6b4, offset=4373, size=196, size_decompressed=212, compression=(65535, 1)),\n",
-        " IndexEntry(id=0017e8f6!c8a4d404a5a3bb0e.545ac67a, offset=1394, size=390, size_decompressed=612, compression=(65535, 1)),\n",
-        " IndexEntry(id=00000000!ef763f593d7b1d07.6017e896, offset=3864, size=509, size_decompressed=740, compression=(65535, 1))]"
+        "[0017e8f6!86c68a94e577adc8.545ac67a,\n",
+        " 00000000!ed7000a97ea8f032.cb5fddc7,\n",
+        " 005fdd0c!ed7000a97ea8f032.545ac67a,\n",
+        " 80000000!889a604f0a722f69.c0db5ae7,\n",
+        " 0017e8f6!ef763f593d7b1d07.545ac67a,\n",
+        " 80000000!889a604f0a722f69.319e4f1d,\n",
+        " 00000000!00d4c1ffd5a99fdb.220557da,\n",
+        " 00000000!c8a4d404a5a3bb0e.6017e896,\n",
+        " 00000000!b6172a3815ab8ef1.0c772e27,\n",
+        " 00000000!fecfa9ccb71b7a4c.0c772e27,\n",
+        " 00000000!86c68a94e577adc8.6017e896,\n",
+        " 00000000!a586620a4681b704.e882d22f,\n",
+        " 00000000!c480a6db0381546e.b61de6b4,\n",
+        " 0017e8f6!c8a4d404a5a3bb0e.545ac67a,\n",
+        " 00000000!ef763f593d7b1d07.6017e896]"
        ]
       }
      ],
@@ -114,10 +114,10 @@
        "output_type": "pyout",
        "prompt_number": 5,
        "text": [
-        "[IndexEntry(id=0017e8f6!86c68a94e577adc8.545ac67a, offset=983, size=411, size_decompressed=624, compression=(65535, 1)),\n",
-        " IndexEntry(id=005fdd0c!ed7000a97ea8f032.545ac67a, offset=2192, size=515, size_decompressed=824, compression=(65535, 1)),\n",
-        " IndexEntry(id=0017e8f6!ef763f593d7b1d07.545ac67a, offset=1784, size=408, size_decompressed=621, compression=(65535, 1)),\n",
-        " IndexEntry(id=0017e8f6!c8a4d404a5a3bb0e.545ac67a, offset=1394, size=390, size_decompressed=612, compression=(65535, 1))]"
+        "[0017e8f6!86c68a94e577adc8.545ac67a,\n",
+        " 005fdd0c!ed7000a97ea8f032.545ac67a,\n",
+        " 0017e8f6!ef763f593d7b1d07.545ac67a,\n",
+        " 0017e8f6!c8a4d404a5a3bb0e.545ac67a]"
        ]
       }
      ],
@@ -144,9 +144,9 @@
        "output_type": "pyout",
        "prompt_number": 6,
        "text": [
-        "[IndexEntry(id=00000000!c8a4d404a5a3bb0e.6017e896, offset=3209, size=655, size_decompressed=1130, compression=(65535, 1)),\n",
-        " IndexEntry(id=00000000!86c68a94e577adc8.6017e896, offset=2707, size=502, size_decompressed=730, compression=(65535, 1)),\n",
-        " IndexEntry(id=00000000!ef763f593d7b1d07.6017e896, offset=3864, size=509, size_decompressed=740, compression=(65535, 1))]"
+        "[00000000!c8a4d404a5a3bb0e.6017e896,\n",
+        " 00000000!86c68a94e577adc8.6017e896,\n",
+        " 00000000!ef763f593d7b1d07.6017e896]"
        ]
       }
      ],
@@ -156,7 +156,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We can also use a raw ResourceID as a filter"
+      "We can also use a raw ResourceID as a filter. This is not likely to be directly useful, but you can also ask for the full index entry rather than just the resource ID with the `full_entries` option to `scan_index`:"
      ]
     },
     {
@@ -164,7 +164,7 @@
      "collapsed": false,
      "input": [
       "rid = dbpf.ResourceID(0x00000000, 0xC8A4D404A5A3BB0E,0x6017E896)\n",
-      "list(dbfile.scan_index(rid))"
+      "list(dbfile.scan_index(rid, full_entries = True))"
      ],
      "language": "python",
      "metadata": {},
@@ -184,9 +184,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "However, it's probably more useful to use the rid as an index. \n",
-      "\n",
-      "As a bonus feature, if you're certain that there is only one file that matches a given filter, you can just use that as a RID."
+      "However, it's probably more useful to use the rid as an index:"
      ]
     },
     {
@@ -208,6 +206,13 @@
       }
      ],
      "prompt_number": 8
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "As a bonus feature, if you're certain that there is only one file that matches a given filter, you can just use that as a RID."
+     ]
     }
    ],
    "metadata": {}
