Renamed sims4 package to s4py to not conflict with Maxis modules, and added full support for the 'dbpf extract' command

--- a/Sims4 DBPF Demo.ipynb
+++ b/Sims4 DBPF Demo.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Raw Cell Format",
   "name": "",
-  "signature": "sha256:4bc1fecc26a249c0d90477f13568190633b35913327b57b7fb1e4e94cd88f8da"
+  "signature": "sha256:59c7c3caa8e727cc2d07003b87eeede5abef815773beb398e72a492d51a1b6a9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -43,14 +43,21 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "if 'sims4.dbpf' in sys.modules: del sys.modules['sims4.dbpf'] # This is used to facilitate a complete reload\n",
-      "from sims4 import dbpf\n",
+      "if 's4py.dbpf' in sys.modules: del sys.modules['s4py.dbpf'] # This is used to facilitate a complete reload\n",
+      "from s4py import dbpf\n",
       "dbfile = dbpf.DBPFFile(\"../docs/Examples/simsmodsquad-novelist.package\")"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
      "prompt_number": 3
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "If you plan on working with absolutely huge files and you only ever plan to scan the index once, or you're limited on RAM, you can disable the index cache by including the option `prescan_index=False` to the DBPFFile constructor."
+     ]
     },
     {
      "cell_type": "markdown",
