Huge refactoring to support multiple package types

--- a/Sims4 DBPF Demo.ipynb
+++ b/Sims4 DBPF Demo.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Raw Cell Format",
   "name": "",
-  "signature": "sha256:59c7c3caa8e727cc2d07003b87eeede5abef815773beb398e72a492d51a1b6a9"
+  "signature": "sha256:ebdb41bbfb8ded37d587919e1fe17ed85bce868c9f721cd3e8f861040a11eb08"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -43,14 +43,25 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "if 's4py.dbpf' in sys.modules: del sys.modules['s4py.dbpf'] # This is used to facilitate a complete reload\n",
-      "from s4py import dbpf\n",
-      "dbfile = dbpf.DBPFFile(\"../docs/Examples/simsmodsquad-novelist.package\")"
+      "from s4py import resource"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
      "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "if 's4py.package' in sys.modules: del sys.modules['s4py.package'] # This is used to facilitate a complete reload\n",
+      "from s4py import package\n",
+      "dbfile = package.open_package(\"../docs/Examples/simsmodsquad-novelist.package\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -70,6 +81,69 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "dbfile.file.header"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 5,
+       "text": [
+        "_Header(file_version=(2, 1), user_version=(0, 0), ctime=0, mtime=0, index_count=15, index_pos=6209, index_size=484)"
+       ]
+      }
+     ],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "list(dbfile.file.get_index(None))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 6,
+       "text": [
+        "[Resource(id=ResourceID(group=1566966, instance=9711602016992004756, type=1415235194), locator=DbpfLocator(offset=983, raw_len=411, compression=(65535, 1)), size=624, package=None),\n",
+        " Resource(id=ResourceID(group=0, instance=17109175714213527721, type=3412057543), locator=DbpfLocator(offset=4814, raw_len=460, compression=(65535, 1)), size=586, package=None),\n",
+        " Resource(id=ResourceID(group=6282508, instance=17109175714213527721, type=1415235194), locator=DbpfLocator(offset=2192, raw_len=515, compression=(65535, 1)), size=824, package=None),\n",
+        " Resource(id=ResourceID(group=2147483648, instance=9843285830282141775, type=3235601127), locator=DbpfLocator(offset=4569, raw_len=245, compression=(65535, 1)), size=300, package=None),\n",
+        " Resource(id=ResourceID(group=1566966, instance=17255048677818777433, type=1415235194), locator=DbpfLocator(offset=1784, raw_len=408, compression=(65535, 1)), size=621, package=None),\n",
+        " Resource(id=ResourceID(group=2147483648, instance=9843285830282141775, type=832458525), locator=DbpfLocator(offset=901, raw_len=82, compression=(65535, 1)), size=136, package=None),\n",
+        " Resource(id=ResourceID(group=0, instance=59885996037423615, type=570775514), locator=DbpfLocator(offset=657, raw_len=244, compression=(65535, 1)), size=297, package=None),\n",
+        " Resource(id=ResourceID(group=0, instance=14457913820777337860, type=1612179606), locator=DbpfLocator(offset=3209, raw_len=655, compression=(65535, 1)), size=1130, package=None),\n",
+        " Resource(id=ResourceID(group=0, instance=13121002462428736056, type=209137191), locator=DbpfLocator(offset=96, raw_len=281, compression=(65535, 1)), size=347, package=None),\n",
+        " Resource(id=ResourceID(group=0, instance=18361080903726246348, type=209137191), locator=DbpfLocator(offset=377, raw_len=280, compression=(65535, 1)), size=345, package=None),\n",
+        " Resource(id=ResourceID(group=0, instance=9711602016992004756, type=1612179606), locator=DbpfLocator(offset=2707, raw_len=502, compression=(65535, 1)), size=730, package=None),\n",
+        " Resource(id=ResourceID(group=0, instance=11927328461003579914, type=3900887599), locator=DbpfLocator(offset=5274, raw_len=935, compression=(65535, 1)), size=1603, package=None),\n",
+        " Resource(id=ResourceID(group=0, instance=14159500691277653723, type=3055412916), locator=DbpfLocator(offset=4373, raw_len=196, compression=(65535, 1)), size=212, package=None),\n",
+        " Resource(id=ResourceID(group=1566966, instance=14457913820777337860, type=1415235194), locator=DbpfLocator(offset=1394, raw_len=390, compression=(65535, 1)), size=612, package=None),\n",
+        " Resource(id=ResourceID(group=0, instance=17255048677818777433, type=1612179606), locator=DbpfLocator(offset=3864, raw_len=509, compression=(65535, 1)), size=740, package=None)]"
+       ]
+      }
+     ],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "list(dbfile.scan_index())"
      ],
      "language": "python",
@@ -78,27 +152,27 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 7,
        "text": [
-        "[0017e8f6!86c68a94e577adc8.545ac67a,\n",
-        " 00000000!ed7000a97ea8f032.cb5fddc7,\n",
-        " 005fdd0c!ed7000a97ea8f032.545ac67a,\n",
-        " 80000000!889a604f0a722f69.c0db5ae7,\n",
-        " 0017e8f6!ef763f593d7b1d07.545ac67a,\n",
-        " 80000000!889a604f0a722f69.319e4f1d,\n",
-        " 00000000!00d4c1ffd5a99fdb.220557da,\n",
-        " 00000000!c8a4d404a5a3bb0e.6017e896,\n",
-        " 00000000!b6172a3815ab8ef1.0c772e27,\n",
-        " 00000000!fecfa9ccb71b7a4c.0c772e27,\n",
-        " 00000000!86c68a94e577adc8.6017e896,\n",
-        " 00000000!a586620a4681b704.e882d22f,\n",
-        " 00000000!c480a6db0381546e.b61de6b4,\n",
-        " 0017e8f6!c8a4d404a5a3bb0e.545ac67a,\n",
-        " 00000000!ef763f593d7b1d07.6017e896]"
+        "[ResourceID(group=0, instance=11927328461003579914, type=3900887599),\n",
+        " ResourceID(group=0, instance=14457913820777337860, type=1612179606),\n",
+        " ResourceID(group=1566966, instance=14457913820777337860, type=1415235194),\n",
+        " ResourceID(group=0, instance=14159500691277653723, type=3055412916),\n",
+        " ResourceID(group=1566966, instance=17255048677818777433, type=1415235194),\n",
+        " ResourceID(group=0, instance=13121002462428736056, type=209137191),\n",
+        " ResourceID(group=0, instance=18361080903726246348, type=209137191),\n",
+        " ResourceID(group=2147483648, instance=9843285830282141775, type=3235601127),\n",
+        " ResourceID(group=0, instance=9711602016992004756, type=1612179606),\n",
+        " ResourceID(group=0, instance=17109175714213527721, type=3412057543),\n",
+        " ResourceID(group=2147483648, instance=9843285830282141775, type=832458525),\n",
+        " ResourceID(group=0, instance=59885996037423615, type=570775514),\n",
+        " ResourceID(group=0, instance=17255048677818777433, type=1612179606),\n",
+        " ResourceID(group=6282508, instance=17109175714213527721, type=1415235194),\n",
+        " ResourceID(group=1566966, instance=9711602016992004756, type=1415235194)]"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -111,7 +185,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "list(dbfile.scan_index(dbpf.ResourceFilter(type=0x545ac67a)))"
+      "list(dbfile.scan_index(resource.ResourceFilter(type=0x545ac67a)))"
      ],
      "language": "python",
      "metadata": {},
@@ -119,16 +193,16 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 8,
        "text": [
-        "[0017e8f6!86c68a94e577adc8.545ac67a,\n",
-        " 005fdd0c!ed7000a97ea8f032.545ac67a,\n",
-        " 0017e8f6!ef763f593d7b1d07.545ac67a,\n",
-        " 0017e8f6!c8a4d404a5a3bb0e.545ac67a]"
+        "[ResourceID(group=1566966, instance=14457913820777337860, type=1415235194),\n",
+        " ResourceID(group=1566966, instance=17255048677818777433, type=1415235194),\n",
+        " ResourceID(group=6282508, instance=17109175714213527721, type=1415235194),\n",
+        " ResourceID(group=1566966, instance=9711602016992004756, type=1415235194)]"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -141,7 +215,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "list(dbfile.scan_index(dbpf.ResourceFilter(type=0x6017E896)))"
+      "rsrcs = list(dbfile.scan_index(resource.ResourceFilter(type=0x6017E896)))\n",
+      "rid = rsrcs[0]\n",
+      "[str(_) for _ in rsrcs]"
      ],
      "language": "python",
      "metadata": {},
@@ -149,29 +225,28 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 9,
        "text": [
-        "[00000000!c8a4d404a5a3bb0e.6017e896,\n",
-        " 00000000!86c68a94e577adc8.6017e896,\n",
-        " 00000000!ef763f593d7b1d07.6017e896]"
+        "['00000000:c8a4d404c8a4d404:6017e896',\n",
+        " '00000000:86c68a9486c68a94:6017e896',\n",
+        " '00000000:ef763f59ef763f59:6017e896']"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We can also use a raw ResourceID as a filter. This is not likely to be directly useful, but you can also ask for the full index entry rather than just the resource ID with the `full_entries` option to `scan_index`:"
+      "Once you have a resource ID, you can get the full resource descriptor by indexing the package."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "rid = dbpf.ResourceID(0x00000000, 0xC8A4D404A5A3BB0E,0x6017E896)\n",
-      "list(dbfile.scan_index(rid, full_entries = True))"
+      "rsrc = dbfile[rid]; rsrc"
      ],
      "language": "python",
      "metadata": {},
@@ -179,26 +254,26 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 10,
        "text": [
-        "[IndexEntry(id=00000000!c8a4d404a5a3bb0e.6017e896, offset=3209, size=655, size_decompressed=1130, compression=(65535, 1))]"
+        "Resource(id=ResourceID(group=0, instance=14457913820777337860, type=1612179606), locator=DbpfLocator(offset=3209, raw_len=655, compression=(65535, 1)), size=1130, package=<s4py.package.DbpfPackage object at 0x7fbcac19ad68>)"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "However, it's probably more useful to use the rid as an index:"
+      "This resouce descriptor can then be used to get the content of the resource:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print(dbfile[rid].decode(\"utf8\"))"
+      "print(dbfile[rid].content.decode(\"utf8\"))"
      ],
      "language": "python",
      "metadata": {},
@@ -212,14 +287,7 @@
        ]
       }
      ],
-     "prompt_number": 8
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "As a bonus feature, if you're certain that there is only one file that matches a given filter, you can just use that as a RID."
-     ]
+     "prompt_number": 11
     }
    ],
    "metadata": {}
